--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.2 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -26,6 +26,7 @@ dependencies:
 
   provider: ^4.0.2
   intl: ^0.15.8 # use DateFormat
+  collection_ext: ^0.2.0
 
   firebase_core: ^0.4.4
   firebase_auth: ^0.15.4
