--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   provider: ^4.0.2
   intl: ^0.15.8 # use DateFormat
   collection_ext: ^0.2.0
+  tuple: ^1.0.3
 
   firebase_core: ^0.4.4
   firebase_auth: ^0.15.4
